--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.3.4",
     "express-handlebars-sections": "^1.0.1",
+    "express-session": "^1.17.2",
     "mysql": "^2.18.1"
   }
 }
